--- a/public/chat.html
+++ b/public/chat.html
@@ -8,12 +8,8 @@
     integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css" />
   <title>ChatBox App</title>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
-    integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4=" crossorigin="anonymous" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="js/main.js" defer></script>
-
 </head>
 
 <!-- 
@@ -47,7 +43,7 @@
   <nav class="h-16 flex justify-between items-center w-full bg-header-footer-dark px-8 py-4 rounded-b-xl">
     <!-- back button -->
     <div class="text-white md:hidden h-8 w-8">
-      <img src="assets/img/back.svg" class="h-full">
+      <img src="./assets/img/back.svg" class="h-full">
     </div>
     <h2 class="text-white flex md:gap-2 flex-col md:flex-row items-center md:items-end">
       <span class="text-sm md:text-lg" id="display-username">Enter ChatBox</span>
@@ -55,34 +51,35 @@
     </h2>
     <ul class="text-white hidden gap-4 md:flex">
       <li>
-        <button
+        <a
           class="bg-button-rooms text-button-rooms-text px-2 py-1 text-[10px] rounded-full flex items-center gap-2">
           <span>ROOMS</span>
           <i class="h-2 w-2">
-            <img src="assets/img/msg.svg" alt="" class="h-full">
+            <img src="./assets/img/msg.svg" alt="" class="h-full">
           </i>
-        </button>
+        </a>
       </li>
       <li>
-        <button class="bg-nickname-button px-2 py-1 text-[10px] rounded-full flex items-center gap-2">
+        <a class="bg-nickname-button px-2 py-1 text-[10px] rounded-full flex items-center gap-2" href="./users.html">
           <span>USERS</span>
           <i class="h-2 w-2">
-            <img src="assets/img/person.svg" alt="" class="h-full">
+            <img src="./assets/img/person.svg" alt="" class="h-full">
           </i>
-        </button>
+        </a>
       </li>
       <li>
-        <button class="bg-nickname-button px-2 py-1 text-[10px] rounded-full flex items-center gap-2" onclick="signOut()">
+        <a class="bg-nickname-button px-2 py-1 text-[10px] rounded-full flex items-center gap-2"
+          onclick="signOut()">
           <span>QUIT</span>
           <i class="h-2 w-2">
-            <img src="assets/img/leave.svg" alt="" class="h-full">
+            <img src="./assets/img/leave.svg" alt="" class="h-full">
           </i>
-        </button>
+        </a>
       </li>
     </ul>
     <!-- hamburger button -->
     <div class="md:hidden" class="h-8 w-8">
-      <img src="assets/img/close.svg" class="w-full">
+      <img src="./assets/img/close.svg" class="w-full">
     </div>
   </nav>
   <!-- mobile nav -->
@@ -91,7 +88,7 @@
       <button class="flex justify-between items-center w-full px-6">
         <span>ROOMS</span>
         <i class="h-4">
-          <img src="assets/img/msg.svg" alt="" class="h-full">
+          <img src="./assets/img/msg.svg" alt="" class="h-full">
         </i>
       </button>
     </li>
@@ -100,7 +97,7 @@
       <button class="flex justify-between items-center w-full px-6">
         <span>ROOMS</span>
         <i class="h-4">
-          <img src="assets/img/msg.svg" alt="" class="h-full">
+          <img src="./assets/img/msg.svg" alt="" class="h-full">
         </i>
       </button>
     </li>
@@ -109,14 +106,15 @@
       <button class="flex justify-between items-center w-full px-6">
         <span>ROOMS</span>
         <i class="h-4">
-          <img src="assets/img/msg.svg" alt="" class="h-full">
+          <img src="./assets/img/msg.svg" alt="" class="h-full">
         </i>
       </button>
     </li>
   </ul>
   <main class="h-full flex">
     <!-- sidebar -->
-    <div class="hidden md:w-1/3 md:flex bg-background-sidebar-dark items-center justify-start pt-8 flex-col gap-6" id="available-rooms">
+    <div class="hidden md:w-1/3 md:flex bg-background-sidebar-dark items-center justify-start pt-8 flex-col gap-6"
+      id="available-rooms">
 
     </div>
     <!-- message all -->
@@ -148,13 +146,13 @@
         <!-- MOB -->
         <div class="md:hidden w-10/12 flex justify-between">
           <div class="">
-            <img src="assets/img/msg.svg" class="invert h-6">
+            <img src="./assets/img/msg.svg" class="invert h-6">
           </div>
           <div class="">
-            <img src="assets/img/person.svg" class=" h-6">
+            <img src="./assets/img/person.svg" class=" h-6">
           </div>
           <div class="">
-            <img src="assets/img/leave.svg" class=" h-6">
+            <img src="./assets/img/leave.svg" class=" h-6">
           </div>
         </div>
 
